--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"sideEffects": false,
 	"main": "dist/cjs/index.js",
 	"module": "dist/esm/index.js",
-	"repository": "git@github.com:DOWNPOURDIGITAL/react-presence.git",
+	"repository": "https://github.com/DOWNPOURDIGITAL/react-presence.git",
 	"author": "johh <code@johh.net>",
 	"license": "BSD-4-Clause",
 	"private": false,
